service-utilisateur/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgitu
  labels:
    name: sgitu
    environment: production
