service-utilisateur/k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: sgitu
  labels:
    app: kafka
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: kafka
  - port: 9093
    targetPort: 9093
    protocol: TCP
    name: controller
  selector:
    app: kafka
